# osworld-impl

./: .dockerignore  .env.example  Dockerfile  README.md  amber-manifest.json5  pyproject.toml
src/: agent.py  executor.py  llm.py  messages.py  prompts.py  server.py  state.py  tools.py
tests/: test_agent_actions.py
